--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-numeric-separator": "7.8.0"
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4"
   }
 }
