--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "compression": "^1.7.4",
     "firebase": "^7.17.2",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-numeric-separator": "^7.10.4"
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "serialize-javascript": ">=3.1.0"
   }
 }
