--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
-  "engines": {
-    "node": "12.x"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "compression": "^1.7.4",
-    "express-sslify": "^1.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
     "firebase": "^7.17.2",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
     "react-stripe-checkout": "^2.6.3",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -38,6 +37,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+    "babel-jest": "^24.9.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -52,6 +54,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "react-scripts": "^3.4.3",
     "serialize-javascript": ">=3.1.0"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
